# larray-editor

./: .gitignore  .travis.yml  README.md  README.rst  environment.yml  make_release.py  next_release.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  test-larray-editor.yml
condarecipe/larray-editor/: bld.bat  build.sh  larray-editor.json  meta.yaml
doc/source/: changes.rst  conf.py  index.rst
doc/source/changes/: template.rst.inc  version_0_30.rst.inc  version_0_31.rst.inc  version_0_32.rst.inc  version_0_32_1.rst.inc  version_0_32_2.rst.inc  version_0_33.rst.inc  version_0_33_1.rst.inc  version_0_34.rst.inc  version_0_34_1.rst.inc  version_0_34_2.rst.inc  version_0_34_3.rst.inc  version_0_34_5.rst.inc  version_0_35.rst.inc  version_0_35_1.rst.inc  version_0_35_2.rst.inc
larray_ameco/: get_ameco.py
larray_editor/: __init__.py  ameco_toc_tree.txt  api.py  arrayadapter.py  arraymodel.py  arraywidget.py  combo.py  commands.py  comparator.py  editor.py  sql.py  start.py  traceback_tools.py  treemodel.py  utils.py  view.py
larray_editor/tests/: run_with_console.py  test_adapter.py  test_api_larray.py  test_compare.py  test_data.py  test_edit.py  test_inplace_modification_pattern.py  test_model.py  test_regex.py
larray_editor/tests/data/: test.xlsx
